meja/tests/operator_names.stderr
File "tests/operator_names.meja", line 11, characters 6-10:
Error: Unbound constructor true.
