meja/tests/operator_names.meja
let (+) = 15;

let (-) = 20;

let (!) = fun (_) => {30;};

let (~-) = fun (_) => {80;};

let (||) = fun (x, y) => {
  switch (x) {
    | true => x
    | false => y
  };
};

let a = (||) (true, false);

let b = true || false;

let c = !a;

let d = - 35;

let e = - d;

let f : (int -> int -> int) -> int = fun (check : 'a -> 'a -> 'a) => {
  let (+) = fun (l, _) => {l;};
  let (-) = fun (_, r) => {r;};
  let (*) = fun (_, r) => {r;};
  let (/) = fun (l, _) => {l;};
  let x = () * true - 1i / ((), ()) + (1i, 1i);
  let y = (() * true) - (1i / ((), ())) + (1i, 1i);
  check (x, y);
};
